2003-12-02  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.

2003-11-28  Christian Groessler  <chris@groessler.org>

	* z8k-dis.c: Convert to ISO C90.
	* z8kgen.c: Convert to ISO C90.
	(opt): Move long opcode for "ldb rdb,imm8" after short one, now
	the short one is created when assembling.
	* z8k-opc.h: Regenerate with new z8kgen.c.

2003-11-19  Kazu Hirata  <kazu@cs.umass.edu>

	* h8300-dis.c (print_colon_thingie): Remove.

2003-11-18  Maciej W. Rozycki  <macro@ds2.pg.gda.pl>

	* mips-opc.c (mips_builtin_opcodes): Handle new macros: "lca" and
	"dlca".

2003-11-14  Nick Clifton  <nickc@redhat.com>

	* dis-init.c (init_disassemble_info): Initialise
	symbol_is_valid field.
	* dis-buf.c (generic_symbol_is_valid): New function.  Always
	returns TRUE.
	* arm-dis.c (arm_symbol_is_valid): New function.  Return FALSE
	for ARM ELF mapping symbols.
	* disassemble.c (disassemble_init_for_target): Set
	symbol_is_valid field to arm_symbol_is_valid of the target is
	an ARM.

2003-11-05  H.J. Lu  <hongjiu.lu@intel.com>

	* m68k-opc.c (m68k_opcodes): Reorder "fmovel".

2003-11-03  Daniel Jacobowitz  <drow@mvista.com>

	* arm-dis.c (print_arm_insn): Print "-" after "#".

2003-10-30  Falk Hueffner  <falk.hueffner@student.uni-tuebingen.de>

	* alpha-opc.c: Add support for a second argument to RPCC.

2003-10-27  Stephane Carrez  <stcarrez@nerim.fr>

	* m68hc11-dis.c: Convert to ISO C90 prototypes.

2003-10-21  Peter Barada  <pbarada@mail.wm.sps.mot.com>
	    Bernardo Innocenti  <bernie@develer.com>

	* m68k-dis.c: Add MCFv4/MCF5528x support.
	* m68k-opc.c: Likewise.

2003-10-10  Dave Brolley  <brolley@redhat.com>

	* frv-asm.c,frv-desc.c,frv-opc.c: Regenerated.

2003-10-08  Dave Brolley  <brolley@redhat.com>

	* frv-desc.[ch], frv-opc.[ch]: Regenerated.

2003-09-30  Bob Wilson  <bob.wilson@acm.org>

	* xtensa-dis.c (fetch_data): Remove numBytes parameter.
	(print_insn_xtensa): Fix call to fetch_data.
